# oxool-module-mergeodf

./: Makefile.am  MergeODF.xml  configure.ac  module.xml.in
admin/: admin.html  admin.js
admin/l10n/: zh_TW.json
debian/: changelog  control
src/: MergeODF.cpp  MergeODF.h  MergeODFParser.cpp  MergeODFParser.h
